libs/openscad-parser/test/corpus/expressions.txt
==================
Binary Expressions
==================

a = 1 + 2;
b = 3 * 4;
c = 5 / 6;
d = 7 - 8;
e = 9 % 10;
f = 2 ^ 3;

---

(source_file
  (var_declaration
    (assignment
      name: (identifier)
      value: (binary_expression
        left: (integer)
        right: (integer))))
  (var_declaration
    (assignment
      name: (identifier)
      value: (binary_expression
        left: (integer)
        right: (integer))))
  (var_declaration
    (assignment
      name: (identifier)
      value: (binary_expression
        left: (integer)
        right: (integer))))
  (var_declaration
    (assignment
      name: (identifier)
      value: (binary_expression
        left: (integer)
        right: (integer))))
  (var_declaration
    (assignment
      name: (identifier)
      value: (binary_expression
        left: (integer)
        right: (integer))))
  (var_declaration
    (assignment
      name: (identifier)
      value: (binary_expression
        left: (integer)
        right: (integer)))))

==================
Unary Expressions
==================

a = -1;
b = !true;
c = +5;

---

(source_file
  (var_declaration
    (assignment
      name: (identifier)
      value: (integer)))
  (var_declaration
    (assignment
      name: (identifier)
      value: (unary_expression
        (boolean))))
  (var_declaration
    (assignment
      name: (identifier)
      value: (unary_expression
        (integer)))))

==================
Range Expressions
==================

r1 = [0:10];
r2 = [0:2:10];

---

(source_file
  (var_declaration
    (assignment
      name: (identifier)
      value: (range
        start: (integer)
        end: (integer))))
  (var_declaration
    (assignment
      name: (identifier)
      value: (range
        start: (integer)
        increment: (integer)
        end: (integer)))))

==================
List Expressions
==================

l = [1, 2, 3];
m = ["a", "b"];

---

(source_file
  (var_declaration
    (assignment
      name: (identifier)
      value: (list
        (integer)
        (integer)
        (integer))))
  (var_declaration
    (assignment
      name: (identifier)
      value: (list
        (string)
        (string)))))
