libs/openscad-parser/test/corpus/intermediate/booleans.txt
==================
Boolean operations — union/difference/intersection blocks
==================

union() { }
difference() { }
intersection() { }

---

(source_file
  (transform_chain (module_call name: (identifier) arguments: (arguments)) (union_block))
  (transform_chain (module_call name: (identifier) arguments: (arguments)) (union_block))
  (transform_chain (module_call name: (identifier) arguments: (arguments)) (union_block)))
