libs/openscad-parser/test/corpus/intermediate/comprehensions-let-variants.txt
==================
Comprehension with let in for and if
==================

echo([for (i = [0:3]) let (a = i) if (a % 2 == 0) a]);

---

(source_file
  (echo_expression
    arguments: (arguments
      (list (list_comprehension
        (for_clause (assignments (assignment name: (identifier) value: (range start: (integer) end: (integer))))
          (expression (if_clause condition: (parenthesized_expression (binary_expression left: (identifier) right: (integer))) consequence: (identifier)))))))
    (expression)))

==================
If clause with let prefix
==================

echo([if (true) let (x = 1) x]);

---

(source_file
  (echo_expression
    arguments: (arguments (list (list_comprehension (if_clause condition: (parenthesized_expression (boolean)) consequence: (identifier)))))
    (expression)))
