libs/openscad-parser/test/corpus/intermediate/comprehensions-nested.txt
==================
Nested list comprehensions with let prefix
==================

[[for (i = [0:2]) [for (j = [0:2]) i + j]]]

---

(source_file
  (list
    (list
      (list_comprehension
        (for_clause
          (assignments (assignment name: (identifier) value: (range start: (number) end: (number))))
          (expression
            (list
              (list_comprehension
                (for_clause
                  (assignments (assignment name: (identifier) value: (range start: (number) end: (number))))
                  (expression (binary_expression left: (identifier) right: (identifier)))))))))))

==================
Comprehension with let prefix and if clause
==================

[for (i = [0:3]) if (i % 2 == 0) let (a = i) a]

---

(source_file
  (list
    (list_comprehension
      (for_clause
        (assignments (assignment name: (identifier) value: (range start: (number) end: (number))))
        (expression
          (if_clause
            condition: (parenthesized_expression (binary_expression left: (identifier) right: (number)))
            consequence: (identifier)))))))
