libs/openscad-parser/test/corpus/intermediate/function-literals.txt
==================
Function literals and assignment
==================

fn = function (x, y) x + y;

---

(source_file
  (var_declaration
    (assignment name: (identifier)
      value: (function_lit parameters: (parameters (parameter (identifier)) (parameter (identifier)))
        body: (binary_expression left: (identifier) right: (identifier))))))
