libs/openscad-parser/test/corpus/intermediate/indexing.txt
==================
Indexing — bracket and dot index
==================

v = [1,2,3];
echo(v[0], v.z);

---

(source_file
  (var_declaration (assignment name: (identifier) value: (list (integer) (integer) (integer))))
  (echo_expression
    arguments: (arguments
      (index_expression value: (identifier) (expression (integer)))
      (dot_index_expression value: (identifier) index: (identifier)))
    (expression)))
