libs/openscad-parser/test/corpus/intermediate/list-permutations.txt
==================
Nested lists and each flattening
==================

[each [1, [2,3], 4]]

---

(source_file
  (list (each (list (number) (list (number) (number)) (number)))))

==================
Range without increment
==================

r = [0:10];

---

(source_file
  (var_declaration (assignment name: (identifier) value: (range start: (number) end: (number)))))
