libs/openscad-parser/test/corpus/intermediate/math-and-functions.txt
==================
Math and function calls
==================

a = cos(PI/4) + 1;
b = pow(2, 8) - sqrt(9);

---

(source_file
  (var_declaration (assignment name: (identifier)
    value: (binary_expression
      left: (function_call name: (identifier) arguments: (arguments (identifier) (binary_expression left: (identifier) right: (number))))
      right: (number))))
  (var_declaration (assignment name: (identifier)
    value: (binary_expression
      left: (binary_expression left: (function_call name: (identifier) arguments: (arguments (number) (number))) right: (function_call name: (identifier) arguments: (arguments (number))))
      right: (number)))))
