libs/openscad-parser/test/corpus/intermediate/polygon-holes.txt
==================
Polygon with holes and paths
==================

polygon(points=[[0,0],[10,0],[10,10],[0,10],[3,3],[7,3],[7,7],[3,7]], paths=[[0,1,2,3],[4,5,6,7]], convexity=10);

---

(source_file
  (transform_chain
    (module_call name: (identifier)
      arguments: (arguments
        (assignment name: (identifier)
          value: (list (list (integer) (integer))
                       (list (integer) (integer))
                       (list (integer) (integer))
                       (list (integer) (integer))
                       (list (integer) (integer))
                       (list (integer) (integer))
                       (list (integer) (integer))
                       (list (integer) (integer))))
        (assignment name: (identifier)
          value: (list (list (integer) (integer) (integer) (integer))
                       (list (integer) (integer) (integer) (integer))))
        (assignment name: (identifier) value: (integer))))
    (statement)))
