libs/openscad-parser/test/corpus/intermediate/text-surface-import.txt
==================
Text rendering options
==================

text("Hello", size=12, font="Liberation Sans", halign="center", valign="top", spacing=1.2, direction="ltr", language="en", script="latin");

---

(source_file
  (transform_chain
    (module_call name: (identifier)
      arguments: (arguments
        (string)
        (assignment name: (identifier) value: (integer))
        (assignment name: (identifier) value: (string))
        (assignment name: (identifier) value: (string))
        (assignment name: (identifier) value: (string))
        (assignment name: (identifier) value: (integer))
        (assignment name: (identifier) value: (string))
        (assignment name: (identifier) value: (string))
        (assignment name: (identifier) value: (string))))
    (statement)))

==================
Surface file inputs
==================

surface(file="heightmap.png", center=true, convexity=10);

---

(source_file
  (transform_chain
    (module_call name: (identifier)
      arguments: (arguments
        (assignment name: (identifier) value: (string))
        (assignment name: (identifier) value: (boolean))
        (assignment name: (identifier) value: (integer))))
    (statement)))

==================
Import variants
==================

import("model.stl", convexity=10);
import("shape.svg", convexity=3);

---

(source_file
  (transform_chain (module_call name: (identifier) arguments: (arguments (string) (assignment name: (identifier) value: (integer)))) (statement))
  (transform_chain (module_call name: (identifier) arguments: (arguments (string) (assignment name: (identifier) value: (integer)))) (statement)))
