libs/openscad-parser/test/corpus/intermediate/transforms-resize-mirror-multmatrix-offset.txt
==================
Resize and mirror transforms
==================

resize([10,20,30]) cube(1);
mirror([1,0,0]) translate([5,0,0]) sphere(2);

---

(source_file
  (transform_chain
    (module_call name: (identifier) arguments: (arguments (list (integer) (integer) (integer))))
    (transform_chain (module_call name: (identifier) arguments: (arguments (integer))) (statement)))
  (transform_chain
    (module_call name: (identifier) arguments: (arguments (list (integer) (integer) (integer))))
    (transform_chain
      (module_call name: (identifier) arguments: (arguments (list (integer) (integer) (integer))))
      (transform_chain (module_call name: (identifier) arguments: (arguments (integer))) (statement)))))

==================
Multmatrix and offset transforms
==================

m = [[1,0,0,0],[0,1,0,0],[0,0,1,0],[0,0,0,1]];
multmatrix(m) cube(1);
offset(delta=1, chamfer=true) square([10,10]);

---

(source_file
  (var_declaration (assignment name: (identifier)
    value: (list (list (integer) (integer) (integer) (integer))
                 (list (integer) (integer) (integer) (integer))
                 (list (integer) (integer) (integer) (integer))
                 (list (integer) (integer) (integer) (integer)))))
  (transform_chain (module_call name: (identifier) arguments: (arguments (identifier)))
                   (transform_chain (module_call name: (identifier) arguments: (arguments (integer))) (statement)))
  (transform_chain (module_call name: (identifier)
    arguments: (arguments (assignment name: (identifier) value: (integer))
                          (assignment name: (identifier) value: (boolean))))
    (transform_chain (module_call name: (identifier) arguments: (arguments (list (integer) (integer)))) (statement))))

==================
Invalid multmatrix (malformed list)
==================
:error

multmatrix([[1,0,0,0],[0,1,0,0],[0,0,1,0],[0,0,0,1]) cube(1);

---
